@@ -30,6 +30,7 @@ enum language_support {
 
     support_option_mask = 0xFF00,
     support_option_preserve_comments = 0x0100,
+    support_option_no_character_validation = 0x0200,
 };
 
 ///////////////////////////////////////////////////////////////////////////////
